waiv chart added
